# SiHaiGuyGame

./: .clangformat  .gitignore  CMakeLists.txt  Game.html  GameInstance.cpp  GameInstance.h  JwtUtil.h  Logger.hpp  Player.cpp  Player.h  WSServer.cpp  WSServer.h  main.cpp
front/: Game.html  waiting-room.html
front/js/: websocket.js
